--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,13 @@ tools:context="com.zxsong.media.mymusic.MainActivity">
         android:text="@string/play"
         android:onClick="resume"/>
 
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#222222"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="00:00/00:00"/>
+
 </LinearLayout>
