--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,11 @@ tools:context="com.zxsong.media.mymusic.MainActivity">
         android:layout_height="wrap_content"
         android:text="@string/stop"
         android:onClick="stop"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/seek"
+        android:onClick="seek"/>
 
     <TextView
         android:id="@+id/tv_time"
